tests/check_output/snapshots/errors__check_output__main@provides_on_impl_with_more_than_one_function.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: #[*_provides] is supposed to be placed on an impl block containing one single function - found 2 functions instead
  --> examples/provides_on_impl_with_more_than_one_function.rs:51:1
   |
51 | / impl<H: Heater, P: Pump> CoffeeMaker<H, P> {
52 | |     fn new(
53 | |         logger: Arc<RwLock<CoffeeLogger>>,
54 | |         heater: Rc<RefCell<H>>,
...  |
66 | |     }
67 | | }
   | |_^

error[E0433]: failed to resolve: use of undeclared type `StaticFactoryCoffeeMaker`
  --> examples/provides_on_impl_with_more_than_one_function.rs:35:24
   |
35 |     maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                        ^^^^^^^^^^^ use of undeclared type `StaticFactoryCoffeeMaker`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `coffee` (example "provides_on_impl_with_more_than_one_function") due to 2 previous errors
